# simple-server

./: README.md  simple-server.cabal
src/: Main1.hs  Main2.hs  Main3.hs  Main4.hs  Main5.hs  Main6.hs  Main7.hs
